force-app/main/default/objects/OpportunityLineItem/fields/Major_Pump__c.field-meta.xml
<CustomField>
    <fullName>Major_Pump__c</fullName>
    <formula>IF(
OR(ProductHierarchy__c = &quot;Z0001S0001PU000002&quot;,
ProductHierarchy__c = &quot;Z0001S0001PU000003&quot;,
ProductHierarchy__c = &quot;Z0001S0001PU000004&quot;,
ProductHierarchy__c = &quot;Z0001S0001CP000002&quot;,
ProductHierarchy__c = &quot;Z0001S0001CP000004&quot;,
ProductHierarchy__c = &quot;Z0001S0001&quot;), TotalPrice,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Major Pump</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>