force-app/main/default/objects/OpportunityLineItem/fields/Material_Number__c.field-meta.xml
<CustomField>
    <fullName>Material_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Material Number</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>This Material is obsolete</errorMessage>
        <filterItems>
            <field>Material_Number__c.Material_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Material_Number__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>