force-app/main/default/objects/OpportunityLineItem/fields/MaterialHierarchy__c.field-meta.xml
<CustomField>
    <fullName>MaterialHierarchy__c</fullName>
    <formula>Text(Material_Number__r.X3rd_Level_Product_Hierarchy__c)</formula>
    <label>MaterialHierarchy</label>
    <type>Text</type>
</CustomField>