force-app/main/default/objects/OpportunityLineItem/fields/ProductHierarchy__c.field-meta.xml
<CustomField>
    <fullName>ProductHierarchy__c</fullName>
    <formula>Text(PricebookEntry.Product2.Third_Level_Product_Hierarchy__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ProductHierarchy</label>
    <type>Text</type>
</CustomField>