force-app/main/default/objects/OpportunityLineItem/fields/Rejected_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejected_Reason__c</fullName>
    <label>Rejected Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Rejected_Reason</valueSetName>
    </valueSet>
</CustomField>