force-app/main/default/objects/OpportunityLineItem/fields/Second_Level_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Second_Level_Hierarchy__c</fullName>
    <formula>TEXT( PricebookEntry.Product2.Second_Level_Hiearchy__c )</formula>
    <label>Second Level Hierarchy</label>
    <type>Text</type>
</CustomField>