force-app/main/default/objects/OpportunityLineItem/fields/Update_Product_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Update_Product_Hierarchy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Product Hierarchy</label>
    <type>Checkbox</type>
</CustomField>