force-app/main/default/objects/OpportunityLineItem/fields/Weighted_Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Weighted_Total_Price__c</fullName>
    <formula>TotalPrice  *  Opportunity.Go_Get__c</formula>
    <label>Weighted Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>